# nanograd

./: .gitignore  README.md  computation graph.gv  pyproject.toml  t.py
examples/: simple_regression.py
nanograd/: engine.py  nn.py  plotting.py
