[tool.poetry]
name = "nanograd"
version = "0.1.0"
description = ""
authors = ["Wian Stipp <stippwian@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
